knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/mondayapp__IntegrationWebhookSubscription__c/mondayapp__IntegrationWebhookSubscription__c.object-meta.xml
<CustomObject>
    <description>monday.com integration webhook subscription</description>
    <label>IntegrationWebhookSubscription</label>
    <nameField>
        <label>IntegrationWebhookSubscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IntegrationWebhookSubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>