knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/mondayapp__IntegrationWebhookSubscription__c/fields/mondayapp__ActionType__c.field-meta.xml
<CustomField>
    <fullName>mondayapp__ActionType__c</fullName>
    <label>ActionType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>