knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/mondayapp__IntegrationWebhookSubscription__c/fields/mondayapp__conditions__c.field-meta.xml
<CustomField>
    <fullName>mondayapp__conditions__c</fullName>
    <label>conditions</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>