knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/mondayapp__IntegrationWebhookSubscription__c/fields/mondayapp__EntityType__c.field-meta.xml
<CustomField>
    <fullName>mondayapp__EntityType__c</fullName>
    <label>EntityType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>