knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/mondayapp__IntegrationWebhookSubscription__c/fields/mondayapp__SubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>mondayapp__SubscriptionID__c</fullName>
    <externalId>true</externalId>
    <label>SubscriptionID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>