knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/mondayapp__IntegrationWebhookSubscription__c/fields/mondayapp__WebhookURL__c.field-meta.xml
<CustomField>
    <fullName>mondayapp__WebhookURL__c</fullName>
    <label>WebhookURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>