knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/mondayapp__IntegrationWebhookSubscription__c/listViews/mondayapp__All.listView-meta.xml
<ListView>
    <fullName>mondayapp__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>